jilles      2006/01/19 17:22:13 UTC	(20060119-4589)
  Log:
  P10: Rewrote m_nick(), now copes with the extensibility
  better and recognizes logins.
  

  Changes:	Modified:
  +17 -65	trunk/protocol/asuka.c (File Modified) 
  +17 -65	trunk/protocol/bircd.c (File Modified) 
  +17 -65	trunk/protocol/undernet.c (File Modified) 


jilles      2006/01/19 16:38:34 UTC	(20060119-4587)
  Log:
  Go back to non-P10 mode on reconnect (so it reconnects
  properly after /squit services.).
  

  Changes:	Modified:
  +1 -0		trunk/protocol/asuka.c (File Modified) 
  +1 -0		trunk/protocol/bircd.c (File Modified) 
  +1 -0		trunk/protocol/undernet.c (File Modified) 


jilles      2006/01/19 16:25:49 UTC	(20060119-4585)
  Log:
  Add a return value to ircd_on_logout().
  If the return value is TRUE, the user was killed to force the logout (P10).
  Hmm, handle_burstlogin() does not reflect this in any kind of return value.
  

  Changes:	Modified:
  +5 -3		trunk/include/phandler.h (File Modified) 
  +9 -8		trunk/modules/nickserv/logout.c (File Modified) 
  +9 -8		trunk/modules/userserv/logout.c (File Modified) 
  +16 -4	trunk/protocol/asuka.c (File Modified) 
  +4 -3		trunk/protocol/bahamut.c (File Modified) 
  +16 -4	trunk/protocol/bircd.c (File Modified) 
  +3 -2		trunk/protocol/charybdis.c (File Modified) 
  +4 -3		trunk/protocol/dreamforge.c (File Modified) 
  +5 -4		trunk/protocol/hyperion.c (File Modified) 
  +4 -3		trunk/protocol/inspircd.c (File Modified) 
  +2 -2		trunk/protocol/ircnet.c (File Modified) 
  +4 -3		trunk/protocol/monkey.c (File Modified) 
  +4 -3		trunk/protocol/plexus.c (File Modified) 
  +4 -3		trunk/protocol/ptlink.c (File Modified) 
  +3 -2		trunk/protocol/ratbox.c (File Modified) 
  +4 -3		trunk/protocol/shadowircd.c (File Modified) 
  +4 -3		trunk/protocol/solidircd.c (File Modified) 
  +4 -3		trunk/protocol/sorcery.c (File Modified) 
  +4 -3		trunk/protocol/ultimate3.c (File Modified) 
  +16 -4	trunk/protocol/undernet.c (File Modified) 